# ascend-ops

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  requirements-build.txt  setup.py
.github/workflows/: precommit-check.yml
_csrc/: ffi.cpp  graph.cpp
_csrc/kernels/: activation.cpp  matmul.cpp  matmul_core.h  swiglu.h
ascend910a_extras/: __init__.py  graph.py  ops.py
benchmark/: print_info.py  test_add_rms_norm.py  test_graph.py  test_grouped_matmul.py  test_matmul.py  test_mlp.py  test_reshape_and_cache.py  test_swiglu.py
csrc/: ffi.cpp  utils.h
csrc/ffi/: activation.cpp  adaptor.h  bind.cpp  graph.cpp  grouped_matmul.cpp  ops.cpp
csrc/ffi/backup/: graph_ge.cpp
csrc/kernels/: activation.cpp  grouped_matmul.cpp  matmul.cpp  matmul_core.h  type.h
csrc/opdev/: CMakePresets.json  build.sh
csrc/opdev/cmake/: config.cmake  device_task.cmake  func.cmake
csrc/opdev/cmake/util/: ascendc_bin_param_build.py  ascendc_compile_kernel.py  ascendc_gen_options.py  ascendc_get_op_name.py  ascendc_impl_build.py  ascendc_op_info.py  ascendc_ops_config.py  ascendc_pack_kernel.py  ascendc_pack_opregistry.py  ascendc_replay_build.py  code_channel_infer.py  const_var.py  gen_ops_filter.sh  gen_version_info.sh  insert_op_info.py  insert_simplified_keys.py  kernel_entry.py  opdesc_parser.py  parse_ini_to_json.py  preset_parse.py  replay_codegen.py  tiling_data_def_build.py
csrc/opdev/cmake/util/makeself/: README.md  makeself-header.sh  makeself.sh  run-tests.sh
csrc/opdev/op_host/: CMakeLists.txt  add_rms_norm_ex.cpp  add_rms_norm_ex_tiling.h  grouped_mat_mul_ex.cpp  grouped_mat_mul_ex_tiling.h  paged_attention_ex.cpp  paged_attention_ex_tiling.h  reshape_and_cache_ex.cpp  reshape_and_cache_ex_tiling.h  rope_ex.cpp  rope_ex_tiling.h  swi_glu_ex.cpp  swi_glu_ex_tiling.h
csrc/opdev/op_kernel/: add_rms_norm_ex.cpp  grouped_mat_mul_ex.cpp  matmul_core.h  paged_attention_ex.cpp  reshape_and_cache_ex.cpp  rope_ex.cpp  swi_glu_ex.cpp
csrc/opdev/scripts/: install.sh  upgrade.sh
kernel_meta/kernel_meta_1153034414871610230/kernel_meta/: cube_random_buff.h  vector_random_buff.h
